fix for wrong z-index on nav tabs for comments

--- a/source/features/sticky-discussion-sidebar.css
+++ b/source/features/sticky-discussion-sidebar.css
@@ -12,7 +12,8 @@
 	display: none;
 }
 
-/* Fixes issue #2576 where opening sidebar modal changes the z-index of certain images and elements */
-[class*='TimelineItem'] {
+/* Fixes issue #2576 and #2601 where opening sidebar modal changes the z-index of certain images and elements */
+[class*='TimelineItem'],
+.tabnav-tabs {
 	z-index: 0 !important;
 }
